fixed dark mode height in UserMainPage component

--- a/client/src/containers/UserMainPage/UserMainPage.module.css
+++ b/client/src/containers/UserMainPage/UserMainPage.module.css
@@ -7,6 +7,10 @@
   position: relative;
 }
 
+:global(.dark-bg) .flexContainerRow {
+  background-color: var(--black);
+}
+
 .mainWrapper {
   padding: 1rem;
   min-height: 90vh;
